css konspekt added

--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,3 +1,53 @@
+
+
+<section class="ms-5">
+<h1>icons <i class="bi bi-apple"></i></h1>
+<a href="https://icons.getbootstrap.com/">https://icons.getbootstrap.com/</a>
+
+{{!-- 
+<head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">  
+</head> 
+--}}
+
+
+
+
+<br>
+<div class="display-1"><i class="bi bi-alarm"> </i></div>
+
+
+
+
+
+<br>
+<a href="https://fontawesome.com/">https://fontawesome.com/</a>
+
+
+{{!-- 
+<head>
+  <script src="https://kit.fontawesome.com/916c33ae60.js" crossorigin="anonymous"></script>
+</head>
+ --}}
+
+<br>
+
+<div class="display-1"> <i class="fa-solid fa-mug-hot"></i></div>
+
+<br>
+
+<h4>SVG</h4>
+
+<svg width="100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/></svg>
+
+<br>
+
+<i class="bi bi-apple"></i>
+
+</section>
+
+<h1>CSS</h1>
+
 <main class='p-5'>
   <h1>Hello World!</h1>
 
@@ -15,3 +65,502 @@
 <script>
   h4tag.style.color = 'red';
 </script>
+
+<hr>
+
+
+<main>
+  <h1>Hello world</h1>
+  <h2>second</h2>
+  <h3>3 title</h3>
+  <hr />
+  <div class='display-1 text-muted'>Hello again</div>
+  <div class='display-5'>second</div>
+  <hr />
+  <button class='btn btn-primary'>
+    <span class='text-uppercase'>Button primary</span>
+  </button>
+  <hr />
+  <div class='card'>
+    <div class='card-body'>
+      content
+    </div>
+  </div>
+</main>
+
+{{! ======================== }}
+
+<main>
+  <div class='row gy-5'>
+    <section class='col-12'>
+      <div class='card text-bg-dark'>
+        <img
+          class='card-img-top'
+          src='https://picsum.photos/400/200'
+          alt='picture'
+        />
+        <div class='card-body'>
+
+          <div
+            class='card-title text-bg-primary'
+          >Title</div>
+          <p>DFDF DFDF ynhnbg rf 34 fd jhjhjyyh fgfgfgfg gg</p>
+          <a href='#' class='btn btn-primary'>Open</a>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <div class='card'>
+        <div class='card-header'>
+          <div>Menu</div>
+        </div>
+        <ul class='list-group list-group-flush'>
+          <li class='list-group-item'><a href='#'>Home page</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Summary</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Skills</a></li>
+        </ul>
+        <div class='card-footer'>
+          <button class='btn btn-dark btn-sm'>Update list</button>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <table class='table table-striped'>
+        <thead>
+          <tr>
+            <th> #id </th>
+            <th>name</th>
+            <th>age</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Jhon</td>
+            <td>35</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Ivan</td>
+            <td>29</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class='col-12'>
+      <div class='row gx-2 gy-3'>
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+  </div>
+
+</main>
+
+{{! ======================== }}
+
+<main>
+
+  <div class='row g-4'>
+    <div class='col-12'>
+      <div class='nav nav-tabs'>
+        <div class='nav-item'>
+          <a href='#' class='nav-link active'>Home Page</a>
+        </div>
+        <div class='item'>
+          <a href='#' class='nav-link'>Catalog</a>
+        </div>
+        <div class='item'>
+          <a href='#' class='nav-link disabled'>FAQ</a>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class='col-4'>
+      <div class='card'>
+        <div class='card-body'>
+          <div class='nav flex-column'>
+            <div class='card my-1'>
+              <div class='nav-item'>
+                <a href='#' class='nav-link'>Home Page</a>
+              </div>
+            </div>
+            <div class='item'>
+              <div class='card my-1'>
+                <a href='#' class='nav-link'>Catalog</a>
+              </div>
+            </div>
+            <div class='item'>
+              <div class='card my-1'>
+                <a
+                  href='#'
+                  class='nav-link disabled'
+                >FAQ</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class='col-4'>
+      <ol class='breadcrumb'>
+        <li class='breadcrumb-item'>
+          <a href='#'> Home</a></li>
+        <li class='breadcrumb-item'>
+          <a href='#'> PC </a></li>
+        <li class='breadcrumb-item'>
+          <a href='#'> MacBook </a></li>
+      </ol>
+
+      <div class='row'>
+        <div class='col-12'>
+          <h6>Hello world
+            <span
+              class='badge text-bg-warning rounded-pill text-uppercase'
+            > топ продаж</span>
+          </h6>
+          <button
+            class='btn btn-primary rounded-pill mb-3'
+          >Click Me!</button>
+          <div class='alert alert-primary'>Impotant info!</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</main>
+
+{{! -------------------------------------------- }}
+
+
+<main class='p-5'>
+  <div class='row g-5'>
+    <div class='col-12'>
+      <form action=''>
+        <div>
+          <label for='form-label'>Email address</label>
+          <input class='form-control' type='text' />
+          <div class='form-text text-danger'>Error. You need
+            to set correct email
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <hr />
+    <div class='row py-5'>
+      <div class='col-3 pt-2'>
+        <label for='form-label'>Email address</label>
+      </div>
+      <div class='col-5'>
+        <input class='form-control' type='text' />
+      </div>
+      <div class='col-4 pt-2'>
+        <div class='form-text text-danger'>Error. You need
+          to set correct email
+        </div>
+      </div>
+    </div>
+  
+    <div class='col-12'>
+      <form action=''>
+        <div>
+          <label for='form-label'>Select role</label>
+          <select class='form-select' type='text' />
+            <option selected value="">Open list</option>
+            <option value="">Admin</option>
+            <option value="">User</option>
+          </select>
+          <div class='form-text text-danger'>Error. You need
+            to set correct email
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <hr>
+
+    <div class='col-6'>
+      <div class="form-check">
+        <label for="" class="form-check-label">Apple</label>
+        <input name="food" type="radio" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Orange</label>
+        <input name="food" type="radio" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Banana</label>
+        <input name="food" type="radio" class="form-check-input">
+      </div>
+    </div>
+
+        <hr>
+
+    <div class='col-6'>
+      <div class="form-check">
+        <label for="" class="form-check-label">Apple</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Orange</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+      <div class="form-check">
+        <label for="" class="form-check-label">Banana</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+    </div>
+
+        <hr>
+
+    <div class='col-6'>
+      <div class="form-check form-switch">
+        <label for="" class="form-check-label">Get bonus</label>
+        <input name="food" type="checkbox" class="form-check-input">
+      </div>
+    </div>
+
+</main>
+
+<hr>
+<main>
+  <div class='row gy-5'>
+    <section class='col-12'>
+      <div class='card text-bg-dark'>
+        <img
+          class='card-img-top'
+          src='https://picsum.photos/400/200'
+          alt='picture'
+        />
+        <div class='card-body'>
+
+          <div
+            class='card-title text-bg-primary'
+          >Title</div>
+          <p>DFDF DFDF ynhnbg rf 34 fd jhjhjyyh fgfgfgfg gg</p>
+          <a href='#' class='btn btn-primary'>Open</a>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <div class='card'>
+        <div class='card-header'>
+          <div>Menu</div>
+        </div>
+        <ul class='list-group list-group-flush'>
+          <li class='list-group-item'><a href='#'>Home page</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Summary</a></li>
+          <li class='list-group-item'><a
+              href='#'
+            >Skills</a></li>
+        </ul>
+        <div class='card-footer'>
+          <button class='btn btn-dark btn-sm'>Update list</button>
+        </div>
+      </div>
+    </section>
+
+    <section class='col-6'>
+      <table class='table table-striped'>
+        <thead>
+          <tr>
+            <th> #id </th>
+            <th>name</th>
+            <th>age</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Jhon</td>
+            <td>35</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Ivan</td>
+            <td>29</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+    <section class='col-12'>
+      <div class='row gx-2 gy-3'>
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+        <div class='col-4'>
+          <div class='card text-bg-success'>
+            <div
+              class='card-header text-center'
+            >Header</div>
+            <div class='card-body text-center'>
+              <h6 class='card-title'>This is title</h6>
+              <p>This is content of our box</p>
+              <button class='btn btn-light'>Click!</button>
+            </div>
+            <div
+              class='card-footer text-center'
+            >Footer</div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+  </div>
+
+</main>
