--- a/src/layout/bootstrap.hbs
+++ b/src/layout/bootstrap.hbs
@@ -23,6 +23,7 @@
       href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css'
     />
     <link href='css/style.css' rel='stylesheet' />
+    <link href='css/css-konspekt.css' rel='stylesheet' />
   </head>
 
   <body>
@@ -32,6 +33,10 @@
 
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'
+    ></script>
+    <script
+      src='https://kit.fontawesome.com/916c33ae60.js'
+      crossorigin='anonymous'
     ></script>
   </body>
 
